move overflow to wrapper https://stackoverflow.com/questions/14270084/overflow-xhidden-doesnt-prevent-content-from-overflowing-in-mobile-browsers

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,9 @@ html, body, #root, .App {
   background-color: #333333;
   display: flex;
   flex-direction: column;
+}
+
+.wrapper {
   overflow-x: hidden;
 }
 
